# to-do-app

./: .gitignore  Cargo.toml  README.MD
src/listings/todo_app/1/: br.com.victor.Todo.gschema.xml  install_schemas.sh  main.rs  utils.rs
src/listings/todo_app/1/todo_object/: imp.rs  mod.rs
src/listings/todo_app/1/todo_row/: todo_row.ui
src/listings/todo_app/1/window/: imp.rs  mod.rs  shortcuts.ui  window.ui
