[package]
name = "to-do"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "to-do"
path = "src/listings/todo_app/1/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version = "0.4.8", package = "gtk4"}
pretty_env_logger = "0.4.0"
serde = {version = "1.0.89", features = ["derive"]}
serde_json = "1.0.81"
log = "0.4.17"